--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Brett Buhler's portfolio page"/>
     <title>Brett Buhler</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BRTVZF1354"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-BRTVZF1354');
+    </script>
   </head>
   <body>
     <div id="root"></div>
